# graph_invariant

./: .gitignore  .zenodo.json  AGENTS.md  LICENSE  PRODUCT.md  README.md  REVIEW.md  Research_Plan_Graph_Invariant_Discovery.md  SPEC.md  STRUCTURE.md  TECH.md  experiment_log.txt  pyproject.toml  run_all_experiments.sh
analysis/: analyze_experiments.py  backtesting.py  calibration_gate.md  calibration_gate.py  component_correlation.py  experiment_analysis.py  experiment_loader.py  expert_rubric.py  external_eval.py  falsification_quality.py  frequency_analysis.py  full_experiment_analysis.md  generate_appendix_tables.py  generate_figures.py  generate_harmony_figures.py  harmony_downstream_analysis.py  harmony_report.py  metrics_table.py  paper_review_2026-05-02.md  phase1_v2_analysis.md  precision_at_n.py  proposal_classification.py  report_writers.py  reproducibility_table.py  scalability_profile.py  statistical_tests.py  wikidata_ablation.py
configs/: ablation_sc_off_seed11.json  ablation_sc_off_seed22.json  ablation_sc_off_seed33.json  benchmark_aspl.json  experiment_algebraic_connectivity.json  experiment_map_elites_aspl.json  phase1_experiment.json  phase1_v2_experiment.json  quick_algebraic_connectivity.json  quick_benchmark_aspl.json
docs/: DATA_POLICY.md  REVIEW.md  SPEC.md  day1_experiment_conversation_summary_2026-02-20.md  day1_screening_selection_2026-02-20.md  final_neurips_rerun_manifest_2026-02-20.md  mlx_long_rerun_estimate_2026-03-04.md  new_research_plan.md  paper_source_audit.md  zenodo_harmony_v1_archive_sha256.txt  zenodo_harmony_v1_metadata.json  (+4 more)
(+336 files in other folders)
